--- a/src/frontend/components/style/Home.css
+++ b/src/frontend/components/style/Home.css
@@ -17,3 +17,30 @@
   font-family: "Rock Salt", cursive;
   text-decoration: underline;
 }
+
+#NFTIcon1{
+  height: 200px;
+  width: 200px;
+  position: absolute;
+  top: 40px;
+  right: 150px;
+  animation: rotation 8s infinite linear;
+}
+
+#NFTIcon2{
+  height: 330px;
+  width: 330px;
+  position: absolute;
+  top: -20px;
+  left: 40px;
+  animation: rotation 8s infinite reverse;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
